--- a/styles/style.css
+++ b/styles/style.css
@@ -173,13 +173,22 @@ h2 {
   width: 300px;
   border: 1px solid #000;
   border-radius: 5px;
-  margin: 20px;
 }
 
+.card-evento img {
+  width: 100%;
+  height: 100%;
+  object-fit: fill;
+  object-position: center;
+}
 
-/*Tabla de posiciones*/
-
-/*Patrocinadores*/
+.img_card{
+  display: flex;
+  width: inherit;
+  flex-direction: row;
+  justify-content: space-evenly;
+  align-items: center;
+}
 
 /*Ubicanos*/
 #mapa {
@@ -319,3 +328,109 @@ footer {
  #tabla-posiciones td:nth-child(8), 
  #tabla-posiciones th:nth-child(9), 
  #tabla-posiciones td:nth-child(9) { display: none; } }
+
+
+
+ /*Palmares*/
+
+ #palmares{
+  padding: 2%;
+  display: grid;
+  grid-template-columns: repeat(11, 1fr);
+ }
+
+ #palmares h2{
+  grid-column: 1/12;
+  margin: 10px;
+ }
+
+ #palmares img{
+  grid-column: 2/7;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  object-position: center;
+ }
+
+ #palmares div{
+  grid-column: 8/10;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+ }
+
+ .palmares-bar{
+  display: flex;
+  justify-content: space-around;
+  align-items: stretch;
+ }
+ .bar {
+  width: 100%;
+  height: 30px;
+  border-radius: 7px;
+  margin: 10px 0;
+  overflow: hidden;
+  background-color: #000000;
+  animation: fillBar 0.5s linear forwards;
+  text-align: center;
+  color: #fff;
+  font-weight: bold;
+  font-size: 16px;
+  line-height: 35px;
+}
+
+@keyframes fillBar {
+  0% {
+    width: 0%;
+  }
+  100% {
+    width: 50%;
+  }
+}
+
+
+.bar-last{
+  width: 100%;
+  height: 30px;
+  background-color: #e0e0e0;
+  border-radius: 7px;
+  margin: 10px 0;
+  overflow: hidden;
+  background-color: #000000; 
+  animation: fillBar2 0.5s linear forwards; 
+  text-align: center;
+  color: #fff;
+  font-weight: bold;
+  font-size: 16px;
+  line-height: 35px;
+}
+
+@keyframes fillBar2 {
+  0% {
+    width: 0%;
+  }
+  100% {
+    width: 100%;
+  }
+  
+}
+
+
+/*Patrocinadores*/
+
+.patrocinadores-grid{
+  padding: 1%;
+  background-color: rgb(0, 0, 0);
+  display: grid;
+  grid-template-columns: repeat(5, 1fr);
+  grid-gap: 1rem;
+  grid-template-rows: minmax(100px, auto);
+  justify-items: center;
+  align-items: center;
+}
+
+@media (max-width: 768px) {
+  .patrocinadores-grid {
+    grid-template-columns: repeat(2, 1fr); 
+  }
+}
