--- a/styles/style.css
+++ b/styles/style.css
@@ -182,7 +182,7 @@ h2 {
   object-position: center;
 }
 
-.img_card{
+.img_card {
   display: flex;
   width: inherit;
   flex-direction: row;
@@ -213,20 +213,22 @@ footer {
 
 
 /*Tarjetas*/
-.title_Eventos{
+.title_Eventos {
   display: flex;
   align-items: center;
   justify-content: flex-start;
 }
-.title_Eventos h3{
+
+.title_Eventos h3 {
   padding-left: 10%;
 }
 
-#eventos{
+#eventos {
   display: flex;
   align-items: center;
   justify-content: space-around;
 }
+
 .card-evento {
   background-color: #e0e0e05e;
   border-radius: 10px;
@@ -253,7 +255,7 @@ footer {
   margin: 10px 0;
 }
 
-.card-evento button {
+button {
   background-color: #000000;
   border: none;
   border-radius: 5px;
@@ -264,19 +266,19 @@ footer {
   transition: transform 0.3s;
 }
 
-.card-evento button:hover {
+button:hover {
   transform: scale(1.1);
 }
 
 
 
 @media (width < 768px) {
-  #eventos{
+  #eventos {
     display: flex;
     flex-direction: column;
   }
 
-  .title_Eventos{
+  .title_Eventos {
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
@@ -293,7 +295,8 @@ footer {
   font-family: Arial, sans-serif;
 }
 
-#tabla-posiciones th, td {
+#tabla-posiciones th,
+td {
   border: 1px solid #ddd;
   padding: 10px;
   text-align: center;
@@ -313,58 +316,63 @@ footer {
 }
 
 
-@media only screen and (max-width: 768px) { 
-#tabla-posiciones th:nth-child(1),
- #tabla-posiciones td:nth-child(1), 
- #tabla-posiciones th:nth-child(4), 
- #tabla-posiciones td:nth-child(4), 
- #tabla-posiciones th:nth-child(5), 
- #tabla-posiciones td:nth-child(5), 
- #tabla-posiciones th:nth-child(6), 
- #tabla-posiciones td:nth-child(6), 
- #tabla-posiciones th:nth-child(7), 
- #tabla-posiciones td:nth-child(7), 
- #tabla-posiciones th:nth-child(8), 
- #tabla-posiciones td:nth-child(8), 
- #tabla-posiciones th:nth-child(9), 
- #tabla-posiciones td:nth-child(9) { display: none; } }
+@media only screen and (max-width: 768px) {
+
+  #tabla-posiciones th:nth-child(1),
+  #tabla-posiciones td:nth-child(1),
+  #tabla-posiciones th:nth-child(4),
+  #tabla-posiciones td:nth-child(4),
+  #tabla-posiciones th:nth-child(5),
+  #tabla-posiciones td:nth-child(5),
+  #tabla-posiciones th:nth-child(6),
+  #tabla-posiciones td:nth-child(6),
+  #tabla-posiciones th:nth-child(7),
+  #tabla-posiciones td:nth-child(7),
+  #tabla-posiciones th:nth-child(8),
+  #tabla-posiciones td:nth-child(8),
+  #tabla-posiciones th:nth-child(9),
+  #tabla-posiciones td:nth-child(9) {
+    display: none;
+  }
+}
 
 
 
- /*Palmares*/
+/*Palmares*/
 
- #palmares{
+#palmares {
   padding: 2%;
   display: grid;
   grid-template-columns: repeat(11, 1fr);
- }
+}
 
- #palmares h2{
+#palmares h2 {
   grid-column: 1/12;
   margin: 10px;
- }
+}
 
- #palmares img{
+#palmares img {
   grid-column: 2/7;
   width: 100%;
   height: 100%;
   object-fit: cover;
   object-position: center;
- }
+}
 
- #palmares div{
+#palmares div {
   grid-column: 8/10;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
- }
+}
 
- .palmares-bar{
+.palmares-bar {
   display: flex;
   justify-content: space-around;
   align-items: stretch;
- }
- .bar {
+}
+
+.bar {
   width: 100%;
   height: 30px;
   border-radius: 7px;
@@ -383,21 +391,22 @@ footer {
   0% {
     width: 0%;
   }
+
   100% {
     width: 50%;
   }
 }
 
 
-.bar-last{
+.bar-last {
   width: 100%;
   height: 30px;
   background-color: #e0e0e0;
   border-radius: 7px;
   margin: 10px 0;
   overflow: hidden;
-  background-color: #000000; 
-  animation: fillBar2 0.5s linear forwards; 
+  background-color: #000000;
+  animation: fillBar2 0.5s linear forwards;
   text-align: center;
   color: #fff;
   font-weight: bold;
@@ -409,16 +418,17 @@ footer {
   0% {
     width: 0%;
   }
+
   100% {
     width: 100%;
   }
-  
+
 }
 
 
 /*Patrocinadores*/
 
-.patrocinadores-grid{
+.patrocinadores-grid {
   padding: 1%;
   background-color: rgb(0, 0, 0);
   display: grid;
@@ -431,6 +441,6 @@ footer {
 
 @media (max-width: 768px) {
   .patrocinadores-grid {
-    grid-template-columns: repeat(2, 1fr); 
+    grid-template-columns: repeat(2, 1fr);
   }
 }
